--- a/udemy/src/main/res/values/strings.xml
+++ b/udemy/src/main/res/values/strings.xml
@@ -1,12 +1,25 @@
 <resources>
     <string name="app_name">SyntaxianZ</string>
-    <string-array name="country">
+    <string-array name="countries">
 
         <item>Japan</item>
+        <item>Russia</item>
         <item>USA</item>
         <item>Korea</item>
         <item>Arab</item>
         <item>Italy</item>
+        <item>Iraq</item>
+        <item>Spain</item>
+        <item>Malaysia</item>
+        <item>Indonesia</item>
+        <item>Brazil</item>
+        <item>America</item>
+        <item>Africa</item>
+        <item>Korea</item>
+        <item>Singapore</item>
+        <item>HongKong</item>
+        <item>China</item>
+        <item>Turkey</item>
 
     </string-array>
 </resources>
